--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "my-app",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "electron": "npx electron .",
+    "package": "npx electron-packager . SolvexDashboard --platform=win32 --arch=x64 --out=dist-electron --overwrite"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "jspdf": "^3.0.4",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@hello-pangea/dnd": "^18.0.1",
+    "axios": "^1.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.561.0",
+    "mqtt": "^5.14.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-rnd": "^10.5.2",
-    "react-router-dom": "^7.10.1",
-    "recharts": "^3.5.1"
+    "react-router-dom": "^7.9.1",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "@eslint/js": "^9.33.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
+    "baseline-browser-mapping": "^2.8.28",
+    "electron": "^26.1.0",
+    "electron-packager": "^17.1.2",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.1.2"
   }
 }
